--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
 
         </div>
         <!-- /content -->
+        <!-- Page navigation -->
+        <div class="page clearfix">
+            <div class="pageup float-left" id="pageup">
+                ◄
+            </div>
+            <div class="count float-left" id="count">
+                1
+            </div>
+            <div class="pagebottom float-left" id="pagebottom">
+                ►
+            </div>
+        </div>
+        <!-- /Page navigation -->
         <!-- footer -->
         <footer style="font-size:15px;margin-top:100px;text-align:right;padding: 10px 10px 50px 10px;">
             <a style="text-decoration: none;" href="https://github.com/hi363138911">梁同桌：GitHub基地</a> / <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> ／<a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a>
