--- a/updata.html
+++ b/updata.html
@@ -38,7 +38,12 @@
         <!-- /写 -->
     </div>
     <!-- /大盒子 -->
-    <script src="lib/marked.min.js"></script>
+    <!-- 提示框 -->
+    <div class="notification" id="notification">
+        每10秒，保存一次.
+    </div>
+    <!-- /提示框 -->
+    <script src="lib/marked.js"></script>
     <script src="lib/av-min.js"></script>
     <script src="js/updata.js"></script>
 </body>
