--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>梁同桌的秘密</title>
+    <title>梁同桌的博客</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -43,7 +43,7 @@
         <!-- /footer -->
     </div>
     <!-- /大盒子 -->
-    <script src="lib/av-min.js"></script>
+    <script src="http://ac-2my9ah1h.clouddn.com/5ef238b7b1c05a5890b6.js"></script>
     <script src="js/index.js"></script>
 </body>
 
