新增标签功能

--- a/atricle.html
+++ b/atricle.html
@@ -15,12 +15,13 @@
     <div class="layout">
         <header>
             <h1 id="title"></h1>
+            <h1 id="tag"></h1>
         </header>
         <!-- /head -->
         <!-- content -->
         <div id="content">
         </div>
-        <div class="time" id="time">
+        <div id="time">
         </div>
         <!-- /content -->
         <!-- footer -->
