--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!-- head -->
         <header>
             <h1 id='title'>梁同桌的秘密</h1>
+
         </header>
         <!-- /head -->
         <!-- content -->
@@ -41,8 +42,19 @@
             <a style="text-decoration: none;" href="https://github.com/hi363138911">梁同桌：GitHub基地</a> / <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> ／<a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a>
         </footer>
         <!-- /footer -->
+
     </div>
     <!-- /大盒子 -->
+    <!--  浮动的按钮与标签 -->
+    <div class="layoutfixed">
+        <div class="layout">
+            <h1 id="tag"></h1>
+            <div id="btn">
+                标签
+            </div>
+        </div>
+    </div>
+    <!-- /浮动的按钮与标签 -->
     <script src="http://ac-2my9ah1h.clouddn.com/5ef238b7b1c05a5890b6.js"></script>
     <script src="js/index.js"></script>
 </body>
