--- a/updata.html
+++ b/updata.html
@@ -15,6 +15,8 @@
         <div class="show float-right ">
             <header>
                 <h1 id="title">标题</h1>
+                <h1 id="tag">标签用英文「 , 」分割</h1>
+
             </header>
             <!-- /head -->
             <!-- content -->
@@ -28,11 +30,11 @@
             <header>
                 <!-- <input type="text" id="input_title"> -->
                 <textarea id="input_title" rows="1" placeholder="标题"></textarea>
-
+                <textarea id="input_tag" rows="1" placeholder="标签用英文「 , 」分割"></textarea>
             </header>
             <!-- /head -->
             <!-- content -->
-            <textarea id="write_content" placeholder="内容"></textarea>
+            <textarea id="input_content" placeholder="内容"></textarea>
 
         </div>
         <!-- /写 -->
