--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="layout">
         <!-- head -->
         <header>
-            <h1 id='title'>梁同桌的秘密</h1>
+            <h1 id='title'>梁同桌的博客</h1>
 
         </header>
         <!-- /head -->
@@ -38,7 +38,7 @@
         </div>
         <!-- /Page navigation -->
         <!-- footer -->
-        <footer style="font-size:15px;margin-top:100px;text-align:right;padding: 10px 10px 50px 10px;">
+        <footer style="font-size:15px;margin-top:100px;text-align:right;padding: 10px 10px 100px 10px;">
             <a style="text-decoration: none;" href="https://github.com/hi363138911">梁同桌：GitHub基地</a> / <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> ／<a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a>
         </footer>
         <!-- /footer -->
