--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="description" content="梁同桌的博客，在这里我会分享我个人心得，以及我在编程方面的知识，与大家共同成长。">
+    <meta name="keywords" content="梁同桌,梁同桌的博客,vscode-china,vscode,liangtongzhuo">
     <title>梁同桌的博客</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
@@ -16,7 +18,6 @@
         <!-- head -->
         <header>
             <h1 id='title'>梁同桌的博客</h1>
-
         </header>
         <!-- /head -->
         <!-- content -->
