--- a/other/caidan/index.html
+++ b/other/caidan/index.html
@@ -13,14 +13,12 @@
 
 <body>
     <div id="particles-js"></div>
-
     <div class="content">
         <div class="inner">
             <div class="timeblock">
-                <h1 class="name">梁同桌的博客</h1>Ï
+                <h1 class="name">梁同桌的博客</h1>
             </div>
         </div>
-
     </div>
 
     <script src="assets/js/particles.min.js"></script>
