--- a/updata.html
+++ b/updata.html
@@ -40,12 +40,12 @@
         <!-- /写 -->
     </div>
     <!-- /大盒子 -->
-    <!-- 提示框 -->
+    <!-- 提示框 -->q
     <div class="notification" id="notification">
         每10秒，保存一次.
     </div>
     <!-- /提示框 -->
-    <script src="lib/marked.min.js"></script>
+    <script src="lib/marked.js"></script>
     <script src="http://ac-2my9ah1h.clouddn.com/5ef238b7b1c05a5890b6.js"></script>
     <script src="js/updata.js"></script>
 </body>
