--- a/atricle.html
+++ b/atricle.html
@@ -31,7 +31,7 @@
         <!-- /footer -->
     </div>
 
-    <script src="lib/marked.min.js"></script>
+    <script src="lib/marked.js"></script>
     <script src="http://ac-2my9ah1h.clouddn.com/5ef238b7b1c05a5890b6.js"></script>
     <script src="js/atricle.js"></script>
 
