--- a/updata.html
+++ b/updata.html
@@ -40,7 +40,7 @@
         <!-- /写 -->
     </div>
     <!-- /大盒子 -->
-    <!-- 提示框 -->q
+    <!-- 提示框 -->
     <div class="notification" id="notification">
         每10秒，保存一次.
     </div>
