--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
-
 <body>
+ <canvas style="position: absolute;width: 100%;height: 40%"></canvas>
     <!-- 大盒子 -->
     <div class="layout">
         <!-- head -->
@@ -22,7 +22,6 @@
         <!-- /head -->
         <!-- content -->
         <div class="content" id="content">
-
         </div>
         <!-- /content -->
         <!-- footer -->
@@ -45,6 +44,8 @@
     <!-- /浮动的按钮与标签 -->
     <script src="http://ac-2my9ah1h.clouddn.com/5ef238b7b1c05a5890b6.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/animation.js"></script>
+
 </body>
 
 </html>
