--- a/updata.html
+++ b/updata.html
@@ -46,7 +46,7 @@
     </div>
     <!-- /提示框 -->
     <script src="lib/marked.js"></script>
-    <script src="http://ac-2my9ah1h.clouddn.com/5ef238b7b1c05a5890b6.js"></script>
+    <script src="lib/av-min.js"></script>
     <script src="js/updata.js"></script>
 </body>
 
