--- a/atricle.html
+++ b/atricle.html
@@ -26,7 +26,7 @@
         <!-- /content -->
         <!-- footer -->
         <footer style="font-size:15px;margin-top:100px;text-align:right;padding: 10px 10px 50px 10px;">
-            <a style="text-decoration: none;" href="https://github.com/hi363138911">梁同桌：GitHub基地</a> / <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> ／<a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a>
+            <a style="text-decoration: none;" href="https://github.com/hi363138911">梁同桌社交：GitHub基地</a> / <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> / <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> / <a style="text-decoration: none;" href="https://www.zhihu.com/people/liang-wen-jin-19/columns">知乎专栏</a> / <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a>
         </footer>
         <!-- /footer -->
     </div>
