--- a/updata.html
+++ b/updata.html
@@ -47,6 +47,7 @@
     <!-- /提示框 -->
     <script src="lib/marked.js"></script>
     <script src="lib/av-min.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/updata.js"></script>
 </body>
 
