--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- /content -->
         <!-- footer -->
         <footer style="font-size:15px;margin-top:100px;text-align:right;padding: 10px 10px 100px 10px;">
-            <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">梁同桌社交：GitHub基地</a> / <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> / <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> / <a style="text-decoration: none;" href="https://www.zhihu.com/people/liang-wen-jin-19/columns">知乎专栏</a> / <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a>
+            <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">梁同桌的社交：GitHub基地</a> / <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> / <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a>            / <a style="text-decoration: none;" href="https://www.zhihu.com/people/liang-wen-jin-19/columns">知乎专栏</a> / <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a>
         </footer>
         <!-- /footer -->
         <a style="text-decoration: none;" href="http://www.miitbeian.gov.cn/">备案号：豫ICP备16015486号</a>
@@ -44,6 +44,7 @@
     </div>
     <!-- /浮动的按钮与标签 -->
     <script src="lib/av-min.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/index.js"></script>
     <script src="js/animation.js"></script>
 
