--- a/updata.html
+++ b/updata.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/updata.css">
     <!-- 代码高亮-->
-    <link rel="stylesheet" href="css/code.css">
+    <link rel="stylesheet" href="css/ltz_code.css">
 </head>
 
 <body>
