--- a/atricle.html
+++ b/atricle.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/atricle.css">
     <!-- 代码高亮-->
-    <link rel="stylesheet" href="css/code.css">
+    <link rel="stylesheet" href="css/ltz_code.css">
 </head>
 
 <body>
