--- a/atricle.html
+++ b/atricle.html
@@ -29,7 +29,7 @@
         </div>
         <!-- /content -->
         <!-- footer -->
-        <footer style="font-size:15px;margin-top:100px;text-align:right;padding: 10px 10px 50px 10px;">
+        <footer>
             <a style="text-decoration: none;" href="http://www.liangtongzhuo.com">梁同桌的首页</a> /
             <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
             <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
@@ -39,13 +39,11 @@
         </footer>
         <!-- /footer -->
     </div>
-
     <script src="lib/av-min.js"></script>
     <script src="lib/marked.js"></script>
     <script src="lib/highlight.pack.js"></script>
     <script src="js/config.js"></script>
     <script src="js/atricle.js"></script>
-
 </body>
 
 </html>
