--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <!-- /content -->
         <!-- footer -->
-        <footer style="font-size:15px;margin-top:100px;text-align:right;padding: 10px 10px 100px 10px;">
+        <footer>
             <a style="text-decoration: none;" href="http://www.liangtongzhuo.com">梁同桌的首页</a> / 
             <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> / 
             <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> / 
@@ -52,7 +52,6 @@
     <script src="js/config.js"></script>
     <script src="js/index.js"></script>
     <script src="js/animation.js"></script>
-
 </body>
 
 </html>
