--- a/updata.html
+++ b/updata.html
@@ -15,12 +15,12 @@
     <div class="clearfix layout-updata">
         <!-- 看 -->
         <div class="show float-right ">
+            <!-- head -->
             <header>
                 <h1 id="title">标题</h1>
                 <h1 id="tag">标签用英文「 , 」分割</h1>
 
             </header>
-            <!-- /head -->
             <!-- content -->
             <div id="content">
                 内容
@@ -29,12 +29,12 @@
         <!-- /看 -->
         <!-- 写 -->
         <div class="write float-right " id="write">
+            <!-- head -->
             <header>
                 <!-- <input type="text" id="input_title"> -->
                 <textarea id="input_title" rows="1" placeholder="标题"></textarea>
                 <textarea id="input_tag" rows="1" placeholder="标签用英文「 , 」分割"></textarea>
             </header>
-            <!-- /head -->
             <!-- content -->
             <textarea id="input_content" placeholder="内容"></textarea>
 
