--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <canvas style="position: absolute;width: 100%;height: 40%"></canvas>
+
     <!-- 大盒子 -->
     <div class="layout">
         <!-- head -->
@@ -23,15 +24,24 @@
         <!-- /head -->
         <!-- content -->
         <div class="content" id="content">
+            <!-- loading -->
+            <div class="loading">
+                <div class="circle">
+                    <svg class="circular" viewBox="25 25 50 50">
+                        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+                    </svg>
+                </div>
+            </div>
+            <!-- /loading -->
         </div>
         <!-- /content -->
         <!-- footer -->
         <footer>
-            <a style="text-decoration: none;" href="http://www.liangtongzhuo.com">梁同桌的首页</a> / 
-            <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> / 
-            <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> / 
-            <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> / 
-            <a style="text-decoration: none;" href="https://www.zhihu.com/people/liang-wen-jin-19/columns">知乎专栏</a> / 
+            <a style="text-decoration: none;" href="http://www.liangtongzhuo.com">梁同桌的首页</a> /
+            <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
+            <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
+            <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> /
+            <a style="text-decoration: none;" href="https://www.zhihu.com/people/liang-wen-jin-19/columns">知乎专栏</a> /
             <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a>
         </footer>
         <!-- /footer -->
