尝试增加分享

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </footer>
         <!-- /footer -->
         <a style="text-decoration: none;" href="http://www.miitbeian.gov.cn/">备案号：豫ICP备16015486号</a>
+
     </div>
     <!-- /大盒子 -->
     <!--  浮动的按钮与标签 -->
@@ -61,6 +62,8 @@
     <script src="js/config.js"></script>
     <script src="js/index.js"></script>
     <script src="js/animation.js"></script>
+    <!-- 分享插件 -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a0a34984aaf69dd"></script>
 </body>
 
 </html>
