--- a/atricle.html
+++ b/atricle.html
@@ -62,6 +62,8 @@
     <script src="lib/highlight.pack.js"></script>
     <script src="js/config.js"></script>
     <script src="js/atricle.js"></script>
+    <!-- 分享插件 -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a0a34984aaf69dd"></script>
 </body>
 
 </html>
