--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <script src="js/config.js"></script>
     <script src="js/index.js"></script>
     <script src="js/animation.js"></script>
-    <!-- 分享插件 -->
+    <!-- 分享插件,个人分享 可删除 -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a0a34984aaf69dd"></script>
 </body>
 
