--- a/atricle.html
+++ b/atricle.html
@@ -63,7 +63,7 @@
     <script src="js/config.js"></script>
     <script src="js/atricle.js"></script>
     <!-- 分享插件,个人分享 可删除 -->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a0a34984aaf69dd"></script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a0a34984aaf69dd" async></script>
 </body>
 
 </html>
