--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
     <meta name="description" content="梁同桌的博客，在这里我会分享我个人心得，以及我在编程方面的知识，与大家共同成长。">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
     <title>梁同桌的博客</title>
