--- a/atricle.html
+++ b/atricle.html
@@ -51,7 +51,7 @@
     </div>
     <script src="lib/av-min.js"></script>
     <script src="lib/marked.js"></script>
-    <script src="lib/highlight.pack.js"></script>
+    <script src="lib/highlight.js"></script>
     <script src="js/config.js"></script>
     <script src="js/atricle.js"></script>
 </body>
