--- a/updata.html
+++ b/updata.html
@@ -46,7 +46,7 @@
     <!-- /提示框 -->
     <script src="lib/av-min.js"></script>
     <script src="lib/marked.js"></script>
-    <script src="lib/highlight.pack.js"></script>
+    <script src="lib/highlight.js"></script>
     <script src="js/config.js"></script>
     <script src="js/updata.js"></script>
 </body>
