--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <canvas style="position: absolute;width: 100%;height: 40%"></canvas>
+    <!-- Vue 作者尤雨溪写的折线图 -->
+    <canvas style="position: absolute;width: 100%;height: 90%;"></canvas>
     <!-- 大盒子 -->
     <div class="layout">
         <!-- head -->
