--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
         <input id="zhuce" type="submit" value="注册" />
     </div>
     <!-- /大盒子 -->
-    <script src="lib/av-min.js"></script>
+    <script src="lib/av.js"></script>
     <script src="js/config.js"></script>
     <script>
         var password = document.getElementById('password');
