--- a/atricle.html
+++ b/atricle.html
@@ -49,7 +49,7 @@
         </footer>
         <!-- /footer -->
     </div>
-    <script src="lib/av-min.js"></script>
+    <script src="lib/av.js"></script>
     <script src="lib/marked.js"></script>
     <script src="lib/highlight.js"></script>
     <script src="js/config.js"></script>
