--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
     <!-- /浮动的按钮与标签 -->
-    <script src="lib/av-min.js"></script>
+    <script src="lib/av.js"></script>
     <script src="js/config.js"></script>
     <script src="js/index.js"></script>
     <script src="js/animation.js"></script>
