--- a/updata.html
+++ b/updata.html
@@ -44,7 +44,7 @@
         每10秒，保存一次.
     </div>
     <!-- /提示框 -->
-    <script src="lib/av-min.js"></script>
+    <script src="lib/av.js"></script>
     <script src="lib/marked.js"></script>
     <script src="lib/highlight.js"></script>
     <script src="js/config.js"></script>
