--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -8,58 +9,14 @@
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
     <title>梁同桌的博客</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link href="css/index.css" rel="stylesheet">
 </head>
-<body>
-    <!-- Vue 作者尤雨溪写的折线图 -->
-    <canvas style="position: absolute;width: 100%;height: 90%;"></canvas>
-    <!-- 大盒子 -->
-    <div class="layout">
-        <!-- head -->
-        <header>
-            <h1 id='title'>梁同桌的博客</h1>
-        </header>
-        <!-- /head -->
-        <!-- content -->
-        <div class="content" id="content">
-            <!-- loading -->
-            <div class="loading">
-                <div class="circle">
-                    <svg class="circular" viewBox="25 25 50 50">
-                        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
-                    </svg>
-                </div>
-            </div>
-            <!-- /loading -->
-        </div>
-        <!-- /content -->
-        <!-- footer -->
-        <footer>
-            <a style="text-decoration: none;" href="http://www.liangtongzhuo.com">梁同桌的首页</a> /
-            <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
-            <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
-            <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> /
-            <a style="text-decoration: none;" href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
-            <a style="text-decoration: none;" href="http://weibo.com/tongrenyinsheng">微博</a>
-        </footer>
-        <!-- /footer -->
-        <a style="text-decoration: none;" href="http://www.miitbeian.gov.cn/">备案号：豫ICP备16015486号</a>
-    </div>
-    <!-- /大盒子 -->
-    <!--  浮动的按钮与标签 -->
-    <div class="layoutfixed">
-        <div class="layout">
-            <h1 id="tag"></h1>
-            <div id="btn">
-                标签
-            </div>
-        </div>
-    </div>
-    <!-- /浮动的按钮与标签 -->
-    <script src="lib/av.js"></script>
-    <script src="js/config.js"></script>
+
+<body id="body">
+    <div id="particles-js"></div>
+    <h1 class="title">梁同桌的博客</h1>
+    <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/animation.js"></script>
 </body>
+
 </html>
