--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
     <link href="css/index.css" rel="stylesheet">
 </head>
 
-<body id="body">
+<body>
     <div id="particles-js"></div>
     <h1 class="title">梁同桌的博客</h1>
+
+    <footer>
+        <a href="http://www.liangtongzhuo/list.html">梁同桌博客</a> /
+        <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
+        <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
+        <a href="http://space.bilibili.com/3591966/">bilibili空间</a> /
+        <a href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
+        <a href="http://weibo.com/tongrenyinsheng">微博</a>
+    </footer>
     <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
 </body>
