--- a/list.html
+++ b/list.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/list.css">
 </head>
+
 <body>
     <!-- Vue 作者尤雨溪写的折线图 -->
     <canvas style="position: absolute;width: 100%;height: 90%;"></canvas>
@@ -62,4 +64,5 @@
     <script src="js/list.js"></script>
     <script src="js/animation.js"></script>
 </body>
+
 </html>
