--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
     <div id="particles-js"></div>
-    <h1 class="title">梁同桌的博客</h1>
+
+    <div class="content">
+        <h1 class="title">梁同桌的博客</h1>
+    </div>
 
     <footer>
         <a href="http://www.liangtongzhuo/list.html">梁同桌博客</a> /
