--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <footer>
-        <a href="http://www.liangtongzhuo/list.html">梁同桌博客</a> /
+        <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> /
         <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
         <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
         <a href="http://space.bilibili.com/3591966/">bilibili空间</a> /
