--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 </head>
 
 <body>
+    <div class="description">
+        大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing . 梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng
+    </div>
     <div id="particles-js"></div>
 
     <div class="content">
-        <h1 class="title">梁同桌的博客</h1>
+        <h1 class="title">CLICK
+            <br/>进入梁同桌博客</h1>
     </div>
 
     <footer>
