--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="particles-js"></div>
 
-    <div class="content">
+    <div class="content" id="content">
         <h1 class="title">CLICK
             <br/>进入梁同桌博客</h1>
     </div>
