--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <div id="particles-js"></div>
 
     <div class="content" id="content">
-        <h1 class="title">CLICK
-            <br/>进入梁同桌博客</h1>
-    </div>
-
-    <footer>
+        <h1 class="title">
+            CLICK
+            <br/>进入梁同桌博客
+        </h1>
+        <br/><br/>
         <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> /
         <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
         <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
         <a href="http://space.bilibili.com/3591966/">bilibili空间</a> /
         <a href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
         <a href="http://weibo.com/tongrenyinsheng">微博</a>
-    </footer>
+    </div>
     <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
 </body>
