--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
             <br/>进入梁同桌博客
         </h1>
         <br/><br/>
-        <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> /
+        <a href="http://www.miitbeian.gov.cn/">备案号：豫ICP备16015486号</a>
+<!--         <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> / 
         <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
         <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
         <a href="http://space.bilibili.com/3591966/">bilibili空间</a> /
         <a href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
-        <a href="http://weibo.com/tongrenyinsheng">微博</a>
+        <a href="http://weibo.com/tongrenyinsheng">微博</a>-->
     </div>
     <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
