--- a/list.html
+++ b/list.html
@@ -20,7 +20,8 @@
     <div class="layout">
         <!-- head -->
         <header>
-            <h1 id='title'>梁同桌的博客</h1>
+<!--             <h1 id='title'>梁同桌的博客</h1> -->
+                        <h1 id='title'>梁同桌</h1>
         </header>
         <!-- /head -->
         <!-- content -->
