--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta name="apple-mobile-web-app-title" content="梁同桌">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
-    <title>梁同桌的博客</title>
+<!--     <title>梁同桌的博客</title> -->
+        <title>梁同桌</title>
     <link href="css/index.css" rel="stylesheet">
 </head>
 
