--- a/list.html
+++ b/list.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
+<!--     <meta name="apple-mobile-web-app-title" content="梁同桌的博客"> -->
+        <meta name="apple-mobile-web-app-title" content="梁同桌">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
-    <title>梁同桌的博客</title>
+<!--     <title>梁同桌的博客</title> -->
+        <title>梁同桌</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/list.css">
 </head>
