--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-<!--     <meta name="apple-mobile-web-app-title" content="梁同桌的博客"> -->
-        <meta name="apple-mobile-web-app-title" content="梁同桌">
+    <meta name="apple-mobile-web-app-title" content="梁同桌的基地">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
-<!--     <title>梁同桌的博客</title> -->
-        <title>梁同桌</title>
+    <title>梁同桌的基地</title>
     <link href="css/index.css" rel="stylesheet">
 </head>
 
@@ -23,17 +21,15 @@
     <div class="content" id="content">
         <h1 class="title">
             CLICK
-<!--             <br/>进入梁同桌博客 -->
-                        <br/>梁同桌
+            <br/>进入梁同桌基地
         </h1>
         <br/><br/>
-        <a href="http://www.miitbeian.gov.cn/">备案号：豫ICP备16015486号</a>
-<!--         <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> / 
+        <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> / 
         <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
         <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
         <a href="http://space.bilibili.com/3591966/">bilibili空间</a> /
         <a href="https://www.zhihu.com/people/liangtongzhuo/activities">知乎专栏</a> /
-        <a href="http://weibo.com/tongrenyinsheng">微博</a>-->
+        <a href="http://weibo.com/tongrenyinsheng">微博</a>
     </div>
     <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
