--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="梁同桌的基地">
+    <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
-    <title>梁同桌的基地</title>
+    <title>梁同桌的博客</title>
     <link href="css/index.css" rel="stylesheet">
 </head>
 
@@ -21,7 +21,7 @@
     <div class="content" id="content">
         <h1 class="title">
             CLICK
-            <br/>梁同桌秘密基地
+            <br/>梁同桌的博客
         </h1>
         <br/><br/>
         <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> / 
