--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="content" id="content">
         <h1 class="title">
-            CLICK
+            Click
             <br/>梁同桌的博客
         </h1>
         <br/><br/>
