--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
-    <script type="text/javascript" src="https://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101482279" data-redirecturi="http://www.liangtongzhuo.com/callback"
+    <script type="text/javascript" src="https://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101482279" data-redirecturi="http://www.liangtongzhuo.com/index.html"
         charset="utf-8"></script>
     <script type="text/javascript">
         QC.Login({
@@ -43,10 +43,28 @@
             console.log(reqData, opts);
         });
 
+    </script>
+    <script type="text/javascript">
+        //从页面收集OpenAPI必要的参数。get_user_info不需要输入参数，因此paras中没有参数
+        var paras = {};
 
-
-
-
+        //用JS SDK调用OpenAPI
+        QC.api("get_user_info", paras)
+            //指定接口访问成功的接收函数，s为成功返回Response对象
+            .success(function (s) {
+                //成功回调，通过s.data获取OpenAPI的返回数据
+                alert("获取用户信息成功！当前用户昵称为：" + s.data.nickname);
+            })
+            //指定接口访问失败的接收函数，f为失败返回Response对象
+            .error(function (f) {
+                //失败回调
+                alert("获取用户信息失败！");
+            })
+            //指定接口完成请求后的接收函数，c为完成请求返回Response对象
+            .complete(function (c) {
+                //完成请求回调
+                alert("获取用户信息完成！");
+            });
     </script>
 </body>
 
