--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <script src="js/particles.min.js"></script>
     <script src="js/index.js"></script>
-    <script type="text/javascript" src="https://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101482279" data-redirecturi="http://www.liangtongzhuo.com/index.html"
+    <script type="text/javascript" src="https://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101482279" data-redirecturi="https://www.liangtongzhuo.com/index.html"
         charset="utf-8"></script>
     <script type="text/javascript">
         QC.Login({
