--- a/index.html
+++ b/index.html
@@ -44,10 +44,20 @@
         });
 
     </script>
+
+    <script type="text/javascript">
+        if (QC.Login.check()) {//如果已登录
+            QC.Login.getMe(function (openId, accessToken) {
+                alert(["当前登录用户的", "openId为：" + openId, "accessToken为：" + accessToken].join("\n"));
+            });
+            //这里可以调用自己的保存接口
+            //...
+        }
+    </script>
+
     <script type="text/javascript">
         //从页面收集OpenAPI必要的参数。get_user_info不需要输入参数，因此paras中没有参数
         var paras = {};
-
         //用JS SDK调用OpenAPI
         QC.api("get_user_info", paras)
             //指定接口访问成功的接收函数，s为成功返回Response对象
