--- a/list.html
+++ b/list.html
@@ -21,6 +21,7 @@
         <!-- head -->
         <header>
             <h1 id='title'>梁同桌的博客</h1>
+            <a class="sub-title" href="http://www.liangtongzhuo.com/atricle.html?5b5bef999f5454003502b539">「关于我」</a>
         </header>
         <!-- /head -->
         <!-- content -->
