--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
     <title>梁同桌的博客</title>
     <link href="css/index.css" rel="stylesheet">
+    <link rel="apple-touch-icon-precomposed" href="./icon.png">
+    <link rel="shortcut icon" href="./icon.png">
+    <link rel="icon" sizes="192x192" href="./icon.png">
 </head>
 
 <body>
     <div class="description">
-        大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing . 梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng
+        大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing .
+        梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng
     </div>
     <div id="particles-js"></div>
 
     <div class="content" id="content">
         <h1 class="title">
             点击
-            <br/>梁同桌秘密基地
+            <br />梁同桌秘密基地
         </h1>
-        <br/>
-        <br/>
+        <br />
+        <br />
         <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> /
         <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
         <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
