--- a/list.html
+++ b/list.html
@@ -11,6 +11,9 @@
     <title>梁同桌的博客</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/list.css">
+    <link rel="apple-touch-icon-precomposed" href="./icon.png">
+    <link rel="shortcut icon" href="./icon.png">
+    <link rel="icon" sizes="192x192" href="./icon.png">
 </head>
 
 <body>
