add apple-mobile-web-app-status-bar-style white

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-title" content="梁同桌的博客">
     <meta name="description" content="大三创业拿到投资创办 ASMR 失败的程序员,有志改变世界,想成为 cool 的人,想让人生精彩一些而努力 ing ">
     <meta name="keywords" content="梁同桌,梁同桌的博客,ltz,vscode-china,vscode,liangtongzhuo,tongrenyinsheng">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white"/>
     <title>梁同桌的博客</title>
     <link href="css/index.css" rel="stylesheet">
     <link rel="apple-touch-icon-precomposed" href="./icon.png">
