--- a/atricle.html
+++ b/atricle.html
@@ -40,7 +40,7 @@
         <!-- /content -->
         <!-- footer -->
         <footer>
-            <a style="text-decoration: none;" href="http://www.liangtongzhuo.com">梁同桌的首页</a> /
+            <a style="text-decoration: none;" href="./index.html">梁同桌的首页</a> /
             <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
             <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
             <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> /
