--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </h1>
         <br />
         <br />
-        <a href="http://liangtongzhuo.com/list.html">梁同桌博客</a> /
+        <a href="./index.html">梁同桌的首页</a> /
         <a href="https://github.com/liangtongzhuo">GitHub基地</a> /
         <a href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
         <a href="http://space.bilibili.com/3591966/">bilibili空间</a> /
