--- a/list.html
+++ b/list.html
@@ -24,7 +24,8 @@
         <!-- head -->
         <header>
             <h1 id='title'>梁同桌的博客</h1>
-            <a class="sub-title" href="http://www.liangtongzhuo.com/atricle.html?5b5bef999f5454003502b539">「关于我」</a>
+            <a class="sub-title" href="./atricle.html?5b5bef999f5454003502b539">About me</a>
+            <a class="sub-title" href="./projects.html">I have done projects</a>
         </header>
         <!-- /head -->
         <!-- content -->
@@ -42,7 +43,7 @@
         <!-- /content -->
         <!-- footer -->
         <footer>
-            <a style="text-decoration: none;" href="http://www.liangtongzhuo.com">梁同桌的首页</a> /
+            <a style="text-decoration: none;" href="./index.html">梁同桌的首页</a> /
             <a style="text-decoration: none;" href="https://github.com/liangtongzhuo">GitHub基地</a> /
             <a style="text-decoration: none;" href="http://www.jianshu.com/u/b9e84b0af9c5">简书日常技术</a> /
             <a style="text-decoration: none;" href="http://space.bilibili.com/3591966/">bilibili空间</a> /
