--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
                 <p>项目使用 Meteor 1.5，记账项目。「个人项目」</p>
             </a>
 
-            <a class="item" href="http://liangtongzhuo.com/atricle.html?59e1e984128fe12e51a1f0ca">
+            <a class="item" href="https://github.com/liangtongzhuo/blog_server">
                 <!-- <img src="http://file.liangtongzhuo.com/bf5c4f9e268264800e99.gif"> -->
                 <h2>梁同桌 公众号</h2>
                 <p>Node.js 没什么内容，接入了一些自动回复</p>
@@ -83,7 +83,7 @@
             <a class="item" href="http://liangtongzhuo.com/atricle.html?59e1e984128fe12e51a1f0ca">
                 <!-- <img src="http://file.liangtongzhuo.com/bf5c4f9e268264800e99.gif"> -->
                 <h2>梁同桌 Blog 开源</h2>
-                <p>梁同桌 Blog 是一款追求「极致简约」的产品 「个人项目」</p>
+                <p>梁同桌 Blog 是一款追求极致简约的产品 「个人项目」</p>
             </a>
 
             <a class="item" href="http://liangtongzhuo.com/atricle.html?58c951e28ac247005f9a5c99">
