--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
             <a class="item" href="https://itunes.apple.com/cn/app/%E5%A6%82%E6%A2%A6%E5%A2%83asmr-%E5%86%85%E5%AE%B9%E7%A4%BE%E5%8C%BA-%E6%9C%89%E4%BD%A0%E6%83%B3%E8%A6%81%E7%9A%84/id1100527753?l=en&mt=8">
                 <!-- <img src="http://file.liangtongzhuo.com/6f7b9d9063c9fe410a4a.gif"> -->
                 <h2>iOS 原同人音声 App</h2>
-                <p>大学期间写的并拿到投资，后并入如梦境数字科技有限公司。</p>
+                <p>大学期间写的并拿到投资，后并入如梦境数字科技有限公司。担任合伙人、CTO</p>
             </a>
 
         </div>
