--- a/love/list.html
+++ b/love/list.html
@@ -79,22 +79,21 @@
 
     <!-- /大盒子 -->
     <!-- /浮动的按钮与标签 -->
+    
     <script src="../lib/av.js"></script>
     <script src="../js/config.js"></script>
     <script>
       const str = `
-      <h3>
-        郝欣欢小公主的许愿箱规则
-      </h3>
-      提醒：你愿望剩余 50 次，上一次许愿时间：<br /><br />
+      <h3>郝欣欢小公主的许愿箱规则</h3>
+      <h4>小公主愿望还剩余 50 次，上一次许愿时间：</h4>
       规则如下:<br />
-        1.小公主在这里留言许愿，由梁同桌负责实现愿望<br />
-        2.小公主一共可以许愿 50 次，每次都为一张二维码<br />
-        3.每星期最多许愿一次，意味着未来一年里每周都可以许愿<br />
-        4.如果本周没有许愿，则愿望可以转化成红包 100 RMB，由系统发送<br />
+        1.小公主在这里留言许愿，由梁同桌负责实现愿望。<br />
+        2.小公主一共可以许愿 50 次，每次都为一张二维码。<br />
+        3.每星期最多许愿一次，意味着未来一年里每周都可以许愿。<br />
+        4.如果本周没有许愿，则愿望可以转化成红包 100 RMB，由系统发送。<br />
         5.如果本周的愿望忘记许并选择不转化红包，可存储为愿望池中，愿望池最多存储
-        5 条，多余 5 条则无效<br />
-        
+        5 条，多余 5 条则无效。<br />
+        <br />
         `
       const content = document.getElementById('content')
       let i = 0
