--- a/love/list.html
+++ b/love/list.html
@@ -84,8 +84,8 @@
     <script src="../js/config.js"></script>
     <script>
       const str = `
-      <h3>郝欣欢小公主的许愿箱规则</h3>
-      <h4>小公主愿望还剩余 50 次，上一次许愿时间：</h4>
+      <h3>郝欣欢小公主愿望还剩余 50 次，上一次许愿时间：</h3>
+      <h3>许愿箱规则:</h3>
       规则如下:<br />
         1.小公主在这里留言许愿，由梁同桌负责实现愿望。<br />
         2.小公主一共可以许愿 50 次，每次都为一张二维码。<br />
