--- a/love/list.html
+++ b/love/list.html
@@ -73,18 +73,30 @@
   <body>
     <!-- 大盒子 -->
     <div class="layout">
-      
       <p id="content"></p>
     </div>
 
     <!-- /大盒子 -->
     <!-- /浮动的按钮与标签 -->
-    
+
     <script src="../lib/av.js"></script>
     <script src="../js/config.js"></script>
     <script>
-      const str = `
-      <h3>郝欣欢小公主愿望还剩余 50 次，上一次许愿时间：</h3>
+      const query = new AV.Query('Loves')
+      query.limit(1000)
+      query.addDescending('createdAt')
+      query
+        .find()
+        .then(function(results) {
+          update(results)
+        })
+        .then(e => {
+          alert('网络错误')
+        })
+
+      function name(data) {
+        const str = `
+      <h3>郝欣欢小公主愿望还剩余 ${a} 次，上一次许愿时间：${a}</h3>
       <h3>许愿箱规则:</h3>
       规则如下:<br />
         1.小公主在这里留言许愿，由梁同桌负责实现愿望。<br />
@@ -95,15 +107,16 @@
         5 条，多余 5 条则无效。<br />
         <br />
         `
-      const content = document.getElementById('content')
-      let i = 0
-      const time = setInterval(() => {
-        i++
-        content.innerHTML = str.substring(0, i)
-        if (i == str.length) {
-          clearInterval(time)
-        }
-      }, 60)
+        const content = document.getElementById('content')
+        let i = 0
+        const time = setInterval(() => {
+          i++
+          content.innerHTML = str.substring(0, i)
+          if (i == str.length) {
+            clearInterval(time)
+          }
+        }, 60)
+      }
     </script>
   </body>
 </html>
